# Layer7

./: .gitignore  LAYER7_PRIMER.md  Layer7_Design.md  README.md  addressing.py  analysis-00.txt  analysis-01.txt  bad_tickets.json  core_structure.py  example0.md  flow_control.py  language_integration.py  layer7-completion.bash  layer7.py  layer7.rb  less_biased_feedback.txt  mcp_native_server.py  mcp_registry.py  mcp_sdk_server.py  mcp_server.py  pyproject.toml  raffle.md  requirements.txt
docs/plans/: layer7_agent_strict_mode_plan.md
examples/: ARCHITECTURE_GUIDE-02.md  ARCHITECTURE_GUIDE-03.md  ARCHITECTURE_GUIDE-04.md  ARCHITECTURE_GUIDE-05.md  ARCHITECTURE_GUIDE.md  code_mapper.md  composition_demo.md  depwire-output.json  depwire_logs.txt  good_tickets.json  layer7llama-completion.bash  layer7llama.md  raffle.md  raw_topology.txt
test/: test_debug.py  test_layer7_core.py  test_qs.py  test_regex.py  test_starlette.py  test_starlette2.py  test_strict.md
